--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,19 +31,22 @@
 
   /* Write your own custom base styles here */
   h1 {
-    @apply text-2xl font-bold md:text-4xl font-primary;
+    @apply font-serif text-2xl font-bold md:text-4xl;
   }
 
   h2 {
-    @apply text-xl font-bold md:text-3xl font-primary;
+    @apply text-xl font-bold md:text-3xl;
   }
 
   h3 {
-    @apply text-lg font-bold md:text-2xl font-primary;
+    @apply text-lg font-bold md:text-2xl;
   }
 
   h4 {
-    @apply text-base font-bold md:text-lg font-primary;
+    @apply text-base font-bold md:text-lg;
+  }
+  h6 {
+    @apply font-serif text-base font-bold;
   }
 
   body {
